--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "typescript": "~4.9.4"
   }
 }
